--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <ul class="nav navbar-nav">
                 <li><a href="#Travel">Travel</a></li>
                 <li><a href="#Movies">Movies</a></li>
-                <li><a href="#work">WORK</a></li>
+                <li><a href="#envoirment">Envoirment</a></li>
                 <li><a href="#writings">WRITINGS</a></li>
                 <li><a href="#aboutMe">BLOG</a></li>
                 <li><a href="#contact">CONTACT</a></li>
@@ -45,7 +45,7 @@
 
     </nav>
     <div class="container">
-        <div class="page-header" id="travel">
+        <div class="page-header" id="Travel">
             <h2 class="text-capitalize">places must visit</h2>
         </div>
         <center>
@@ -62,7 +62,7 @@
                 <p class="text-muted text-left"> Arunachal Pradesh is a state in Northeast India. It borders the states of Assam and Nagaland to the south. Capital is Itanagar </p>
             </div>
         </center>
-        <div class="page-header" id="movies">
+        <div class="page-header" id="Movies">
             <h2 class="text-capitalize">review on the movies</h2>
         </div>
 
@@ -92,25 +92,109 @@
             <div class="bg-primary movie_head" data-toggle="collapse" data-target="#Chalaang">
                 <span class=" glyphicon glyphicon-camera"></span> Chalaang<i class="fa fa-sort-desc"></i>
             </div>
+        </div>
 
-            <div id="Chalaang" class="collapse">
+        <div id="Chalaang" class="collapse">
 
-                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
-                    <img src="Chalaang.jpg" class="img-responsive img-thumbnail">
-                </div>
+            <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+                <img src="Chalaang.jpg" class="img-responsive img-thumbnail">
+            </div>
 
-                <div class="col-lg-9 col-md-9 col-sm-9 col-xs-12 movie_text">
-                    <h5 class="text-success text-left text-capitalize">Excellent film about sports!
-                        <span class="glyphicon glyphicon-star"></span>
-                        <span class="glyphicon glyphicon-star"></span>
-                        <span class="glyphicon glyphicon-star"></span>
-                        <span class="glyphicon glyphicon-star"></span>
-                        <span class="glyphicon glyphicon-star"></span>
-                    </h5>
-                    <p>Chhalaang (transl. Leap) is a 2020 Indian Hindi-language sports comedy drama film directed by Hansal Mehta. It is produced by Ajay Devgan, Luv Ranjan, Ankur Garg and presented by Bhushan Kumar.[4] Chhalaang stars Rajkummar Rao, Nushrat Bharucha and Mohammed Zeeshan Ayyub.</p>
+            <div class="col-lg-9 col-md-9 col-sm-9 col-xs-12 movie_text">
+                <h5 class="text-success text-left text-capitalize">Excellent film about sports!
+                    <span class="glyphicon glyphicon-star"></span>
+                    <span class="glyphicon glyphicon-star"></span>
+                    <span class="glyphicon glyphicon-star"></span>
+                    <span class="glyphicon glyphicon-star"></span>
+                    <span class="glyphicon glyphicon-star"></span>
+                </h5>
+                <p>Chhalaang (transl. Leap) is a 2020 Indian Hindi-language sports comedy drama film directed by Hansal Mehta. It is produced by Ajay Devgan, Luv Ranjan, Ankur Garg and presented by Bhushan Kumar.[4] Chhalaang stars Rajkummar Rao, Nushrat Bharucha and Mohammed Zeeshan Ayyub.</p>
+            </div>
+        </div>
+        <div class="page-header col-lg-12 col-md-12 col-sm-12 col-xs-12" id="Envoirment">
+            <h2 class="text-capitalize">review on the movies</h2>
+        </div>
+        <ul class="list-group">
+            <li class="list-group-item list-group-item-success col-lg-12 col-md-12 col-sm-12 col-xs-12 envoirment_li">
+                <h4>LEGO plans to find replacement material for bricks by 2030</h4> <img src="e1.jpeg" class="img-responsive col-lg-5 col-md-5 col-sm-5 col-xs-12">
+                <p class="list-group-item-text col-lg-7 col-md-7 col-sm-7 col-xs-12">In an effort to be more environmentally responsible, LEGO have said they aim to stop manufacturing bricks made of plastic resin and are considering other options, which could include hemp. According to Telegraph World, the company makes 60 billion blocks a year. While LEGO want to replace the harmful plastic used in their products, they also require the new material to meet the high standards that allow the blocks to work as they always have, especially with the effective “clicking” together is a key aspect of the iconic coloured block.</p>
+            </li>
+            <div class="page-header col-lg-12 col-md-12 col-sm-12 col-xs-12" id="Envoirment">
+                <h2 class="text-capitalize">review on the movies</h2>
+            </div>
+            <li class="list-group-item list-group-item-warning col-lg-12 col-md-12 col-sm-12 col-xs-12 envoirment_li">
+                <h4>Amazon deforestation</h4> <img src="e1.jpeg" class="img-responsive col-lg-5 col-md-5 col-sm-5 col-xs-12">
+                <p class="list-group-item-text col-lg-7 col-md-7 col-sm-7 col-xs-12">he perceived scale of the Amazon blazes received global attention this summer. However, international concerns raised at the time were countered by the Brazilian Government, which claimed the fire situation in August was 'normal' and 'below the historical average'.An international team of scientists writing in the journal Global Change Biology say the number of active fires in August was actually three times higher than in 2018 and the highest number since 2010.
+                </p>
+            </li>
+        </ul>
+        <section id="contact"> <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15078.353856082635!2d72.8906491!3d19.1257017!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xacf72f56793d190a!2sWHITEHAT%20EDUCATION%20TECHNOLOGY%20PVT%20LTD!5e0!3m2!1sen!2sin!4v1573468987088!5m2!1sen!2sin" height="450" frameborder="0" allowfullscreen=""></iframe>
+            <hr style="width: 100%;"> <img src="kid.jpeg" class="img-responsive img-circle col-lg-3 col-md-3 col-sm-3 col-xs-3">
+            <h3>Peter Parker</h3>
+            <div class="contact_1"> <a href="mailto:my@gmail.com?Subject=Hi">
+                    <h5><i class="fa fa-envelope"></i>&nbsp;&nbsp;mygmailid@gmail.com</h5>
+                </a> <a href="#">
+                    <h5><i class="fa fa-instagram"></i>&nbsp;&nbsp;myinstagramid</h5>
+                </a> </div>
+        </section>
+
+
+
+        <div class="page-header col-lg-12 col-md-12 col-sm-12 col-xs-12" id="books">
+            <h2 class="text-capitalize">Books</h2>
+        </div>
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <h4>Bill Gates</h4>
+            <h4><mark class="books"> <i> <sup><i class="fa fa-quote-left"></i></sup> Reading is still the main way that I both learn new things and test my understanding. <sup><i class="fa fa-quote-right"></i></sup> </i> </mark> </h4>
+        </div>
+
+        <div class="page-header col-lg-12 col-md-12 col-sm-12 col-xs-12" id="books">
+            <h2 class="text-capitalize">List of books</h2>
+        </div>
+        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6" data-toggle="modal" data-target="#firstbook">
+            <img src="s1.jpg" class="img-responsive">
+            <hr>
+            <p class="text-primary">Man on the Moon (Picture Puffins)</p>
+        </div>
+        <div class="modal fade" id="firstbook">
+            <div class="modal-dialog">
+                <!-- Modal content-->
+                <div class="modal-content">
+                    <div class="modal-header"> <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">Man on the Moon </h4>
+                    </div>
+                    <div class="modal-body"> <img src="s1.jpg" class="img-responsive img_modal">
+                        <p class="p_modal">It was 1969 and no one had ever set foot on the moon. Some said it couldn't be done. But astronauts Mike Collins, Buzz Aldrin, and Neil Armstrong were going to try . . . Here in picture book format is the amazing true story of the first moon landing, when a man set foot on an unexplored world and showed us that the boundaries of our world were limitless."[A] perfect introduction to space, the space program, and exploration. Thrilling!" (Kirkus Reviews)"The milestone event [is] a great idea for a picture book!" <br>
+                            <a href="https://www.amazon.in/Moon-Picture-Puffins-Anastasia-Suen/dp/0140565981/ref=sr_1_2_sspa?crid=176WU3JFDK2JP&keywords=books+on+space+for+kids&qid=1575444723&sprefix=books+on%2Caps%2C285&sr=8-2-spons&psc=1&smid=A3H3WE9M6NY1KV&spLa=ZW5jcnlwdGVkUXVhbGlmaWVyPUEzTVBPRUUyMlg5TU9XJmVuY3J5cHRlZElkPUEwMjUyOTM3MU9XVklaVFdUMk9GUSZlbmNyeXB0ZWRBZElkPUEwNDAwNTE1T1JZSVhWWDM3NTlMJndpZGdldE5hbWU9c3BfYXRmJmFjdGlvbj1jbGlja1JlZGlyZWN0JmRvTm90TG9nQ2xpY2s9dHJ1ZQ==" target="_blank"><b>BEST BUY LINK</b></a>
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
+        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6" data-toggle="modal" data-target="#secondbook">
+            <img src="s1.jpg" class="img-resposive img_modal">
+            <hr>
+            <p class="text-primary"> First Space Encyclopaedia </p>
+        </div>
+        <div class="modal fade" id="secondbook">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header"> <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">Man on the Moon </h4>
+                    </div>
+                    <div class="modal-body"><img src="s1.jpg" class="ïmg-responsive img_modal">
+                            <p class="p_modal">Zoom off into the galaxy and investigate all the planets, from Earth to Mars with First Space Encyclopaedia. Packed full of stunning photography, quizzes and amazing facts, children will become space experts in no time. Covering everything from observatories and rockets, to the solar system and the death of stars, children will discover all about space and space travel." <br>
+                                <a href="https://www.amazon.in/First-Space-Encyclopaedia-DK/dp/0241293421/ref=sr_1_3?crid=3QEF58W4132JJ&dchild=1&keywords=first+space+encyclopedia&qid=1608828036&sprefix=first+space+%2Caps%2C356&sr=8-3" target="_blank"><b>BEST BUY LINK</b></a>
+                            </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+
+    </div>
 
 </body>
 
